# module-ice

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ReadMe.md
cmake/: turn_off_warning.cmake
config/: fmtlib.in
project/: CMakeLists.txt
project/include/project/: logger.ixx  macro.hpp
standalone_test/: CMakeLists.txt
standalone_test/src/: main.cpp
